kubernetes/projects/home-automation/apps/rack-ops-controllers/smart-queues-rpi-thermal-governor.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: rpi-thermal-governor
  namespace: rack-ops
  labels:
    app.kubernetes.io/name: rpi-thermal-governor
    app.kubernetes.io/part-of: rack-ops
    home-lab.io/project-slug: home-automation
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rpi-thermal-governor
      app.kubernetes.io/part-of: rack-ops
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rpi-thermal-governor
        app.kubernetes.io/part-of: rack-ops
        home-lab.io/project-slug: home-automation
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: harbor-registry
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-rpi1
                      - k8s-rpi2
                      - k8s-rpi3
      tolerations:
        - operator: Exists
      containers:
        - name: governor
          image: registry.home/docker.io/library/busybox:1.38 # {"$imagescan": "rack-ops-busybox"}
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -ceu
            - |
              [...]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 96Mi
          securityContext:
            privileged: true
            readOnlyRootFilesystem: true
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - name: host-sys
              mountPath: /host-sys
      volumes:
        - name: host-sys
          hostPath:
            path: /sys
            type: Directory
